Weather/Service/deploy/manifest.yaml
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: weather-database
  namespace: home-monitor
  labels:
    app: weather-database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-database
  serviceName: weather-database
  template:
    metadata:
      labels:
        app: weather-database
    spec:
      containers:
      - name: weather-database
        image: mcr.microsoft.com/mssql/server
        terminationMessagePath: "/dev/termination-log"
        terminationMessagePolicy: File
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: data
            mountPath: /var/opt/mssql       
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: kubernetes
      schedulerName: default-scheduler
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: local-path
        resources:
          requests:
            storage: 4Gi
---
kind: Service
apiVersion: v1
metadata:
  name: weather-database
spec:
  ports:
  - name: client
    port: 1433
  selector:
    app: weather-database
  type: LoadBalancer
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: weather-service
  namespace: home-monitor
  labels:
    app: weather-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-service
  template:
    metadata:
      labels:
        app: weather-service
    spec:
      containers:
      - name: weather-service
        image: ckaczor/home-monitor-weather-service:#BUILD_BUILDNUMBER#
        terminationMessagePath: "/dev/termination-log"
        terminationMessagePolicy: File
        imagePullPolicy: Always
        securityContext:
          privileged: true
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: kubernetes
      schedulerName: default-scheduler
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: weather
  namespace: home-monitor
  annotations:
    kubernetes.io/ingress.class: traefik
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: "/api/weather"
        backend:
          serviceName: weather-service
          servicePort: 80
